--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -112,10 +112,54 @@
         </div>
     </header>
 
-    <div class="offwhite testEmpty">
-        hello
-    </div>
+    <section class="" style="margin: 100px 0 100px 0;">
+        <div class="d container px-4 px-lg-5">
+            <div class="UXCaseTeam row gx-0 justify-content-center mx-5 border border-black rounded-3 py-4">
+                <div class="text-center col-md-4">
+                    <h5>Role</h5>
+                    <b1>Designer <br>
+                    Researcher</b1>
+                </div>
 
+                <div class="text-center col-md-4">
+                    <h5>Team</h5>
+                    <b1>
+                        Jacqueline VanWert (Designer) <br>
+                        Sherlene Woodall (Designer) <br>
+                        Frederick Macon (Designer)
+                    </b1>
+                </div>
+
+                <div class="text-center col-md-4">
+                    <h5>Duration</h5>
+                    <b1>
+                        3 weeks <br>
+                        (Jan 10 - 26)
+                    </b1>
+                </div>
+            </div>
+
+            <div class="row gx-0 justify-content-center align-items-center my-5 mt-5 mb-lg-6 px-5 pt-4">
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Research">Research</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="">Definition</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="">Ideation</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="">Prototyping</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="">Testing</a>
+            </div>
+        </div>
+
+        <!-- Research ################################################################-->
+        <div class="container px-4 px-lg-5 pt-4">
+            <div class="mx-5 mb-5">
+                <p class="leadingLine text-nav text-muted" id="VTP_Research">
+                    Research
+                </p>
+                <p class="playFair testEmpty">
+                    We started by creating a proto-persona to help us determine interview questions and our target audience.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer-->
     <footer class="footer bg-transparent small text-center text-black-50">
