--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
         <!-- Projects-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
-                    Featured Projects </p>
+                <p class="leadingLine text-nav text-muted mb-lg-6">
+                    Featured Projects
+                </p>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a href="./CaseStudies/UX_VTP.html">
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
                             </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -151,7 +152,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -159,7 +160,7 @@
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -193,7 +194,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -205,7 +206,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
-                        <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
+                        <p class="leadingLine text-nav text-muted mb-lg-6">
                             About Me </p>
                         <h2 class="text-black mb-5 col-lg-auto aboutMeTag">3D/Product Designer based in Orlando, Florida.</h2>
 
