--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a href="./CaseStudies/UX_VTP.html">
-                            <img class="img-fluid UXCaseImg" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
                             </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -152,7 +152,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid UXCaseImg" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -194,7 +194,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
