--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -112,7 +112,8 @@
         </div>
     </header>
 
-    <section class="" style="margin: 100px 0 100px 0;">
+    <!-- Navigation ################################################################-->
+    <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
             <div class="UXCaseTeam row gx-0">
                 <div class="text-center col-md-4">
@@ -139,16 +140,17 @@
                 </div>
             </div>
 
-            <div class="UXCaseNav row gx-0 mb-lg-6">
+            <div class="UXCaseNav row gx-0 mb-lg-8">
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Research">Research</a>
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Definition">Definition</a>
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Ideation">Ideation</a>
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="">Testing</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Testing">Testing</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Conclusion">Conclusion</a>
             </div>
         </div>
 
-        <!-- Research ################################################################-->
+    <!-- Research ################################################################-->
         <div class="container px-4 px-lg-5" id="VTP_Research">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
@@ -217,7 +219,7 @@
     </section>
 
     <!-- Ideation ################################################################-->
-    <section style="padding: 9.375rem 0 9.375rem 0;">
+    <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="VTP_Ideation">
             <div class="">
                 <p class="leadingLine text-nav text-muted">
@@ -238,9 +240,8 @@
                             We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.
                         </b1>
                     </div>
-                    <div class="img-fluid">
-                        <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="">
-                    </div>
+
+                    <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -254,16 +255,83 @@
                     Prototyping
                 </p>
                 <div class="">
-                    <div>
-                        <b1 class="mb-5">
+                    <div class="mb-5">
+                        <b1>
                             We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
                         </b1>
                     </div>
-                    <div class="img-fluid">
-                        <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="">
+                    <div class="row justify-content-center">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-md-3">
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Research ################################################################-->
+    <div class="container px-4 px-lg-5" id="VTP_Testing">
+        <div class="" style="margin: 9.375rem 0;">
+            <p class="leadingLine text-nav text-muted mb-5">
+                Testing
+            </p>
+            <p class="playFair mb-md-5">
+                Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
+            </p>
+            <div class="d-flex">
+                <div class="col-md-7 align-self-center">
+                    <b1 class="">
+                        We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
+                        </br>
+                        </br>
+                        The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.
+                        </br>
+                        </br>
+                        With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
+                    </b1>
+                </div>
+                <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
+            </div>
+        </div>
+    </div>
+
+    <!-- Conclusion ################################################################-->
+    <section id="VTP_Conclusion">
+        <div class="container px-4 px-lg-5">
+            <div class="">
+                <p class="leadingLine text-nav text-muted mb-5">
+                    Conclusion
+                </p>
+                <div class="">
+                    <div class="mb-5">
+                        <p class="playFair mb-md-5">
+                            We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
+                        </p>
+                        <div class=" row col-10 align-items-center pb-5">
+                            <b1>
+                                With more iterations, this app would be constantly evolving to keep up with teacher needs.
+                                </br>
+                                </br>
+                                For our next steps, we will create a hi-fi prototype with the ability to access cloud saved lessons by all teachers. We would also finish building out our calendar and the “My Classes” tab to show student information for each class.
+                                </br>
+                                </br>
+                                <b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b>
+                            </b1>
+                        </div>
+                    </div>
+                </div>
+                <p class="leadingLine text-nav text-muted my-5">
+                    Final Prototype
+                </p>
+                <div class="row justify-content-center col-auto">
+                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end me-sm-5 mb-sm-4">
+            <p style="margin: 0.5rem 0.5rem 0.9rem 0;">Next:</p>
+            <a class="me-sm-5 hvr-sweep" href="">TreasuryDirect.gov</a>
         </div>
     </section>
 
