--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -324,7 +324,7 @@
                 <p class="leadingLine text-nav text-muted my-5">
                     Final Prototype
                 </p>
-                <div class="justify-content-center col-auto">
+                <div class="row justify-content-center col-auto">
                     <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                 </div>
             </div>
