more minor tweaking

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -329,9 +329,9 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end me-sm-5 mb-sm-4">
+        <div class="d-flex justify-content-end mb-sm-4" style="margin-right: 8vw;">
             <p style="margin: 0.5rem 0.5rem 0.9rem 0;">Next:</p>
-            <a class="me-sm-5 hvr-sweep" href="">TreasuryDirect.gov</a>
+            <a class="hvr-sweep" href="">TreasuryDirect.gov</a>
         </div>
     </section>
 
