minor aesthetic tweaks

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -270,7 +270,7 @@
         </div>
     </section>
 
-    <!-- Research ################################################################-->
+    <!-- Testing ################################################################-->
     <div class="container px-4 px-lg-5" id="VTP_Testing">
         <div class="" style="margin: 9.375rem 0;">
             <p class="leadingLine text-nav text-muted mb-5">
@@ -308,7 +308,7 @@
                         <p class="playFair mb-md-5">
                             We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
                         </p>
-                        <div class=" row col-10 align-items-center pb-5">
+                        <div class="col-sm-0 col-md-8 pb-5">
                             <b1>
                                 With more iterations, this app would be constantly evolving to keep up with teacher needs.
                                 </br>
@@ -324,7 +324,7 @@
                 <p class="leadingLine text-nav text-muted my-5">
                     Final Prototype
                 </p>
-                <div class="row justify-content-center col-auto">
+                <div class="row col-auto">
                     <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                 </div>
             </div>
