--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-    <title>Leon Dinh - UX Case - Virtual Teaching Platform</title>
+    <title>Leon Dinh - UX Case - TreasuryDirect.gov Redesign</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 
     <!-- Font Awesome icons (free version)-->
@@ -33,7 +33,7 @@
 
 <!-- ########################################################################################################### -->
 
-<body class="caseStudyVTP">
+<body class="caseStudyTD">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDNXQD" height="0" width="0" style="display:none;visibility:hidden"></iframe>
@@ -65,8 +65,8 @@
                                 <div class="col-md-7">
                                     <ul class="list-unstyled">
                                         <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
-                                        <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
-                                        <li><a class="dropdown-item" href="./UX_TD.html">TreasuryDirect.gov</a></li>
+                                        <li><a class="dropdown-item" href="./UX_VTP.html">Virtual Teaching Platform</a></li>
+                                        <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
                                         <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
                                         <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                     </ul>
@@ -96,14 +96,14 @@
     <header class="hero-section home masthead-sub">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
             <div class="d-flex">
-                <div class="col-sm-auto col-md-10">
-                    <h1 class="col-lg-6 my-0 mb-4">Virtual Teaching Platform</h1>
+                <div class="">
+                    <h1 class="col-auto my-0 mb-4">TreasuryDirect.gov</h1>
                     <h2 class="mt-2 col-lg-6 col-md-8">
                         <p class="mb-2 fw-normal fadeIn-2">
-                            The all-in-one virtual teaching platform for teachers.
+                            An updated web and mobile design for TreasuryDirect.gov website.
                             <br>
                             <br>
-                            Virtual teachers have a lot on their plates and have to use multiple resources to plan and teach. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.
+                            TreasuryDirect is the first and only financial services website that lets individuals buy and redeem securities directly from the U.S. Department of the Treasury in paperless electronic form.
                         </p>
                     </h2>
                 </div>
@@ -124,9 +124,8 @@
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
                     <b1>
-                        Jacqueline VanWert (Designer) <br>
                         Sherlene Woodall (Designer) <br>
-                        Frederick Macon (Designer)
+                        Emmanuel Kastrenakes (Designer)
                     </b1>
                 </div>
 
@@ -134,56 +133,35 @@
                     <h5>Duration</h5>
                     <b1>
                         3 weeks <br>
-                        (Jan 10 - 26)
+                        (Feb 27 - Mar 18)
                     </b1>
                 </div>
             </div>
 
             <div class="UXCaseNav row gx-0 mb-lg-8">
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Research">Research</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Definition">Definition</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Ideation">Ideation</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Testing">Testing</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#VTP_Conclusion">Conclusion</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Research">Research</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Definition">Definition</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Ideation">Ideation</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Prototyping">Prototyping</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Testing">Testing</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Conclusion">Conclusion</a>
             </div>
         </div>
 
     <!-- Research ################################################################-->
-        <div class="container px-4 px-lg-5" id="VTP_Research">
+        <div class="container px-4 px-lg-5" id="TD_Research">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
                     Research
                 </p>
                 <p class="playFair mb-md-5">
-                    We started by creating a proto-persona to help us determine interview questions and our target audience.
+                    Coming soon
                 </p>
                 <div class="d-flex">
                     <div class="col-md-7">
                         <b1 class="">
-                            Once we completed 6 interviews with teachers and transcribed them, we completed an affinity diagram using Figjam to help visualize key things that stand out, such as the amount of resources that teachers currently use to plan lessons.
-                            </br>
-                            </br>
-                            Then, we created an empathy map to help further understand our users key pains and gains and further develop our teacher user-persona.
-                            </br>
-                            </br>
+                            Coming soon
                         </b1>
-
-                        <b1 class="fw-bold">
-                            The 8 key problems/concerns:
-                            </br>
-                            </br>   
-                        </b1>
-                        <u class="text-decoration-none">
-                            <li>Enjoyments about Virtual Teaching</li>
-                            <li>Troubles with Attendance</li>
-                            <li>Difficult Student Engagement</li>
-                            <li>Parent Involvement</li>
-                            <li>Difficulty with Programs</li>
-                            <li>Experiences about Teaching Virtually</li>
-                            <li>Resources commonly used</li>
-                            <li>Resources needed</li>
-                        </u>
                     </div>
                     <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
                 </div>
@@ -192,24 +170,21 @@
     </section>
 
     <!-- Definition ################################################################-->
-    <section id="VTP_Definition">
+    <section id="TD_Definition">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
                     Definition
                 </p>
                 <p class="playFair mb-md-5">
-                    Using our research we were able to identify the main problems that teachers face.
+                    Coming soon
                 </p>
                 <div class="d-flex">
                     <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
                     <div class="col-md-1"></div>
                     <div class="col-md-6 align-self-center">
                         <b1 class="">
-                            As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
-                            </br>
-                            </br>
-                            We then decided to complete a competitor analysis of similar websites, such as <b>Canvas, Nearpod, Zoom, and Microsoft Teams</b>... that allowed us to discuss their features, strengths, and weaknesses and use that information to guide our ideation process.                             
+                            Coming soon                          
                         </br>
                     </div>
                 </div>
@@ -219,35 +194,29 @@
 
     <!-- Ideation ################################################################-->
     <section style="padding: 9.375rem 0;">
-        <div class="container px-4 px-lg-5" id="VTP_Ideation">
+        <div class="container px-4 px-lg-5" id="TD_Ideation">
             <div class="">
                 <p class="leadingLine text-nav text-muted">
                     Ideation
                 </p>
                 <p class="playFair mb-md-5 mb-5">
-                    Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
+                    Coming soon
                 </p>
                 <div class="">
                     <div class="mb-5">
                         <b1 class="">
-                            Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
-                            </br>
-                            </br>
-                            Our value proposition canvas allowed us to identify how those features would help users current pains with preparing lessons and what users would gain from using our app.                            
-                            </br>
-                            </br>
-                            We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.
+                            I'm serious, I will get to it.
                         </b1>
                     </div>
 
-                    <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
+                    <img src="../assets/img/UX_VTP/UX_TD_ValueProp.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Prototyping ################################################################-->
-    <section id="VTP_Prototyping">
+    <section id="TD_Prototyping">
         <div class="container px-4 px-lg-5">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
@@ -256,13 +225,13 @@
                 <div class="">
                     <div class="mb-5">
                         <b1>
-                            We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
+                            Patience is key.
                         </b1>
                     </div>
                     <div class="row justify-content-center">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-md-3">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-md-3">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_TD_pototype01.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_TD_pototype02.png" alt="" class="img-fluid col-md-3">
+                        <img src="../assets/img/UX_VTP/UX_TD_pototype03.png" alt="" class="img-fluid col-md-3">
                     </div>
                 </div>
             </div>
@@ -270,24 +239,18 @@
     </section>
 
     <!-- Testing ################################################################-->
-    <div class="container px-4 px-lg-5" id="VTP_Testing">
+    <div class="container px-4 px-lg-5" id="TD_Testing">
         <div class="" style="margin: 9.375rem 0;">
             <p class="leadingLine text-nav text-muted mb-5">
                 Testing
             </p>
             <p class="playFair mb-md-5">
-                Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
+                Look! I get it.
             </p>
             <div class="d-flex">
                 <div class="col-md-7 align-self-center">
                     <b1 class="">
-                        We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
-                        </br>
-                        </br>
-                        The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.
-                        </br>
-                        </br>
-                        With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
+                        Eventually???
                     </b1>
                 </div>
                 <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
@@ -296,7 +259,7 @@
     </div>
 
     <!-- Conclusion ################################################################-->
-    <section id="VTP_Conclusion">
+    <section id="TD_Conclusion">
         <div class="container px-4 px-lg-5">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
@@ -305,17 +268,11 @@
                 <div class="">
                     <div class="mb-5">
                         <p class="playFair mb-md-5">
-                            We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
+                            Wow!!
                         </p>
                         <div class="col-sm-0 col-md-8 pb-5">
                             <b1>
-                                With more iterations, this app would be constantly evolving to keep up with teacher needs.
-                                </br>
-                                </br>
-                                For our next steps, we will create a hi-fi prototype with the ability to access cloud saved lessons by all teachers. We would also finish building out our calendar and the “My Classes” tab to show student information for each class.
-                                </br>
-                                </br>
-                                <b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b>
+                                Did you seriously scroll all the way down here?
                             </b1>
                         </div>
                     </div>
@@ -323,16 +280,47 @@
                 <p class="leadingLine text-nav text-muted my-5">
                     Final Prototype
                 </p>
-                <div class="row col-auto">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                <p class="my-0">
+                                    Ok fine here's the <b>Mobile Version</b>.
+                                </p>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body row col-auto">
+                                <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D506%253A80%26scaling%3Dscale-down%26page-id%3D301%253A82%26starting-point-node-id%3D506%253A80" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                <p class="my-0">
+                                    Also check out the <b>Desktop Version</b>.
+                                </p>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body row col-auto">
+                                <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D562%253A824%26scaling%3Dscale-down%26page-id%3D562%253A138%26starting-point-node-id%3D562%253A824" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="d-flex mb-sm-4 UXCaseSwap justify-content-end">
-            <div class="d-flex">
+        <div class="mb-sm-4 UXCaseSwap">
+            <div class="">
+                <p>Previous:</p>
+                <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
+            </div>
+            <div class="">
                 <p>Next:</p>
-                <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
+                <a class="hvr-sweep" href="">ArtsForAll.com</a>
             </div>
         </div>
     </section>
