--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <ul class="list-unstyled">
                                             <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
-                                            <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
                                             <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
@@ -141,11 +141,11 @@
                                 <p class="UXCaseTag">Desktop</p>
                                 <p class="UXCaseTag">Mobile</p>
                             </div>
-                            <a class="hvr-sweep UXCaseButton" href="">View Case Study</a>
+                            <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_TD.html">View Case Study</a>
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <a>
+                        <a href="./CaseStudies/UX_TD.html">
                             <img class="img-fluid UXCaseImg mb-4" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
                         </a>
                     </div>
